<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/menu_search_text" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_menu_favorites"
        android:title="@string/menu_favorite_text" />
    <item
        android:id="@+id/nav_responses"
        android:icon="@drawable/ic_menu_responses"
        android:title="@string/menu_reply_text" />
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_menu_messages"
        android:title="@string/menu_message_text" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/menu_profile_text" />
</menu>