<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:background="@drawable/bg_card"
    android:clickable="true">


    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/reply_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/looking_number_text"
            style="@style/TextStyle.Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tools_looking_number_text"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/title_text"
            style="@style/TextStyle.Title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tools_vacancy_title_text" />

        <TextView
            android:id="@+id/town_text"
            style="@style/TextStyle.Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tools_town_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/company_text"
                style="@style/TextStyle.Text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/tools_company_name" />

            <ImageView
                android:id="@+id/verified_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_verified" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/case_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_case" />

            <TextView
                android:id="@+id/experience_text"
                style="@style/TextStyle.Text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tools_exp_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/published_date_text"
            style="@style/TextStyle.Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tools_publish_date_text"
            android:textColor="@color/grey_3" />

    </LinearLayout>


    <ImageView
        android:id="@+id/favorite_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_menu_favorites_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reply_button"
        style="@style/GreenButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button_green"
        android:padding="0dp"
        android:text="@string/reply_button_text"
        android:textAppearance="@style/TextStyle.ButtonText2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>